style: Update design of comment input form fix: Ensure proper operation of comment feature